--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,5 +45,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "src/generated", "dist", "resources"]
+  "exclude": ["node_modules", "dist", "resources", "generated"]
 }
