--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
+    // "rootDir": "./src",
     "outDir": "./dist",
 
     // Environment Settings
@@ -36,7 +36,7 @@
     // Recommended Options
     "strict": true,
     // "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
+    // "verbatimModuleSyntax": true,
     "esModuleInterop": true,
     // "ignoreDeprecations": "6.0",
     "isolatedModules": true,
@@ -45,5 +45,5 @@
     "skipLibCheck": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "resources", "generated"]
+  "exclude": ["node_modules", "dist", "resources"]
 }
